--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>My Personal Website</title>
+    <title>My Website</title>
 </head>
 <body>
     <h1>Hello World!</h1>
+    <script src="script.js"></script>
+
 </body>
 </html>
