Created event listener, finished first draft

--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to my website!</h1>
     <script src="script.js"></script>
+
+    <h2 class="about"> About Me</h2>
+    <p>
+        My name is Lori Henderson and I am 26 years old.
+        I was born and raised in Indiana.
+        I have a younger brother in college and an adopted beagle/pug mix named Spike.
+        I love traveling and been to many interesting places.
+        Despite that, I love doing nothing at home and relaxing with my dog or going on walks.
+        I love anime and Pokémon especially.  Looking forward to starting Flatiron School shortly
+        and meeting some great people.
+        <br>
+        <img src="./images/Smiling Spike.jpg" alt="Smiling Spike">
+    </p>
+
+    <h2 class="activities">My favorite activities:</h2>
+    <ul>
+        <li>Traveling</li>
+        <li>Riding my bike</li>
+        <li>Spending time with my dog</li>
+        <li>Watching TV</li>
+    </ul>
+
+    <h2 class="contact">Contact Me!</h2>
+    Click <a href="https://www.linkedin.com/in/lori-henderson-1449a550/">here</a>
+    to connect with me on LinkedIn.
+
+    <hr>
+
+    <div id="demo">Click here to see a secret message!</div>
 
 </body>
 </html>
